# Reinvent2021

./: .gitignore
ReinventMemeFeed/ReinventMemeFeed/: ContentView.swift  ReinventMemeFeedApp.swift
ReinventMemeFeed/ReinventMemeFeed.xcodeproj/: project.pbxproj
ReinventMemeFeed/ReinventMemeFeed/Extensions/: DateFormatter+Extension.swift  URL+Extensions.swift
ReinventMemeFeed/ReinventMemeFeed/Models/: Meme.swift  MemeResponse.swift
ReinventMemeFeed/ReinventMemeFeed/Services/: MemeService.swift
ReinventMemeFeed/ReinventMemeFeed/ViewModels/: FeedViewModel.swift  MemeViewModel.swift
ReinventMemeFeed/ReinventMemeFeed/Views/: FeedView.swift  LabelView.swift
ReinventMemeGenerator/: .gitignore  Cargo.toml  pack.sh
ReinventMemeGenerator/src/: lib.rs  memeify.rs  text_layout.rs
ReinventModeratorApp/: Config.xcconfig
ReinventModeratorApp/ReinventModeratorApp/: Info.plist  ReinventModeratorAppApp.swift
ReinventModeratorApp/ReinventModeratorApp.xcodeproj/: project.pbxproj
ReinventModeratorApp/ReinventModeratorApp/Extensions/: Date+Extensions.swift
ReinventModeratorApp/ReinventModeratorApp/Models/: Meme.swift
ReinventModeratorApp/ReinventModeratorApp/New Group/: LabelView.swift  MemeRow.swift
ReinventModeratorApp/ReinventModeratorApp/Services/: DynamoService.swift
ReinventModeratorApp/ReinventModeratorApp/ViewModels/: MemeViewModel.swift  ModeratorFeedViewModel.swift
ReinventModeratorApp/ReinventModeratorApp/Views/: ModeratorFeedView.swift
ReinventWebServer/: build.gradle.kts  settings.gradle.kts
(+14 files in other folders)
