[package]
name = "reinvent-2021-rust"
version = "0.1.0"
edition = "2018"
authors = ["Zelda Hessler <zhessler@amazon.com>"]
license = "Apache 2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.20-alpha", package = "aws-config" }
aws-sdk-s3 = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.20-alpha", package = "aws-sdk-s3" }
bytes = "1.1.0"
clap = "2.33.3"
image = "0.23.14"
imageproc = "0.22.0"
lambda_runtime = "0.4.1"
log = "0.4.14"
once_cell = "1.8.0"
reqwest = { version = "0.11.5", default-features = false, features = ["rustls-tls", "json"] }
rusttype = "0.9.2"
serde = "1"
serde_json = "1"
simple_logger = "1.13.0"
thiserror = "1.0.30"
time = "0.3.4"
tokio = "1.12.0"
tracing-subscriber = "0.3.1"
urlencoding = "2.1.0"
uuid = { version = "0.8", features = ["v4"] }
